# buildingragisnotaproblem

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
ai-backend/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  run_chat_worker.py
ai-backend/core/: database.py  server.py
ai-backend/core/logger/: log_handler.py  log_viewer.html  log_viewer_service.py  logger.py
ai-backend/core/middlewares/: middleware.py
ai-backend/modules/RAG/: database.py  models.py  prompts.py  routes.py  schema.py  service.py
ai-backend/modules/analytics/: models.py  routes.py  service.py
ai-backend/modules/chat/: database.py  models.py  rabbitmq_service.py  redis_service.py  routes.py  schema.py  service.py  worker.py
ai-backend/modules/healthcheck/: healthcheck_routes.py  routes.py
ai-backend/modules/logviewer/: log_viewer_routes.py  routes.py
frontend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/upload/: page.tsx
frontend/app/workspace/: page.tsx
frontend/components/: navigation.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/components/ui/: scroll-area.tsx
frontend/lib/: api.ts  config.ts
